manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phrase-app-service
spec:
  selector:
    app: phrase-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
