manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phrase-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lovish.dev.smallcase.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: phrase-app-service
            port:
              number: 80
